<resources>
    <string name="app_name">All School</string>
    <string name="txt_calendario">Calendario</string>
    <string name="txt_materias">Asignaturas</string>
    <string name="txt_gps">Gps</string>
    <string name="txt_nota">Mi nota</string>
    <string name="txt_modo">  Modo </string>
    <string name="txt_calculonota"> Cálculo de nota rápido</string>
    <string name="txt_periodo1"> Periodo 1</string>
    <string name="txt_periodo2"> Periodo 2</string>
    <string name="txt_peridodo3"> Periodo 3</string>
    <string name="boton_calcularnota"> Calcular</string>
    <string name="validacion"> Debe agregar sus dos notas y asignarle sus porcentajes</string>
    <string name="validacion2"> Debe agregar su nota y asignarle su porcentaje</string>


    <string name="lunes">LUN</string>
    <string name="martes">MAR</string>
    <string name="miercoles">MIÉ</string>
    <string name="jueves">JUE</string>
    <string name="viernes">VIE</string>
    <string name="sabado">SÁB</string>

    <string name="guardar">Guardar</string>
    <string name="modificar">Modificar</string>
    <string name="consultar">Consultar</string>

    <string name="et_materia">Materia</string>
    <string name="et_desc">Descripción</string>
    <string name="btn">Agregar</string>
    <string name="adicionar">Adicionar</string>
    <string name="tarea">TAREA</string>
    <string name="title_activity_dibujo">dibujo</string>
    <string name="title_activity_botonnn">botonnn</string>


</resources>
