<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".CalculoNota">


    <android.support.constraint.ConstraintLayout

        android:layout_width="370dp"
        android:layout_height="316dp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="37dp">


        <TextView
            android:id="@+id/tv_periodo1"
            android:layout_width="67dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/txt_periodo1"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cortes"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_cortes"
            android:layout_width="77dp"
            android:layout_height="29dp"
            android:layout_marginStart="36dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="24dp"
            android:text="Periodos"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_cortes"
            android:layout_width="127dp"
            android:layout_height="29dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toEndOf="@+id/tv_cortes"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Guardar"
            android:layout_width="89dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="spinner"
            android:text="Aceptar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toEndOf="@+id/spinner_cortes"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_nota1"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="52dp"
            android:layout_marginLeft="52dp"
            android:layout_marginTop="80dp"
            android:ems="8"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_periodo1"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_porc1"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="30"
            android:inputType="number"
            android:text="30"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.146"
            app:layout_constraintStart_toEndOf="@+id/txt_nota1"
            app:layout_constraintTop_toBottomOf="@+id/btn_Guardar" />

        <TextView
            android:id="@+id/tv_periodo2"
            android:layout_width="65dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/txt_periodo2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_periodo1"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txt_nota2"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:ems="8"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/tv_periodo2"
            app:layout_constraintTop_toBottomOf="@+id/txt_nota1"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txt_porc2"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="8"
            android:inputType="number"
            android:text="30"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.134"
            app:layout_constraintStart_toEndOf="@+id/txt_nota2"
            app:layout_constraintTop_toBottomOf="@+id/txt_porc1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_periodo3"
            android:layout_width="65dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/txt_peridodo3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_periodo2"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tv_porc3"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="76dp"
            android:layout_marginRight="8dp"
            android:text="%"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toEndOf="@+id/tv_nota3"
            app:layout_constraintTop_toBottomOf="@+id/txt_porc2"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_nota3"
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:layout_marginStart="56dp"
            android:layout_marginLeft="56dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="Nota"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_periodo3"
            app:layout_constraintTop_toBottomOf="@+id/txt_nota2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="338dp"
            android:layout_height="38dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorBotones"
            android:onClick="calcular3Cortes"
            android:text="Calcular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nota3" />

        <TextView
            android:id="@+id/tv_1"
            android:layout_width="342dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="Resultado"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_calcular" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
